readingFolder new component

--- a/client-jss/src/app/main/components/department-hub/department-hub.component.html
+++ b/client-jss/src/app/main/components/department-hub/department-hub.component.html
@@ -58,14 +58,36 @@
                           <div class="d-flex flex-wrap gap-1">
                             <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
                               class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
-                            <a *ngIf="currentUser"
+
+                            <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
                               class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
-                              (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
                               <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
                                 'text-transparent': !post.isBookmarked}">
                               </i>
                             </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
+                        </a>
                           </div>
                         </div>
                         <h4>
@@ -106,13 +128,39 @@
                       </div>
                       <div class="card-body  d-md-flex align-items-center">
                         <div class="card-flex-content">
-                          <div class="d-flex flex-wrap">
+                          <div class="d-flex flex-wrap gap-1">
                             <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
                               class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
-                            <a
-                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
-                              <i class="bi-bookmark"></i>
+
+                            <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                              </i>
                             </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
+                        </a>
                           </div>
                           <h4>
                             <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
@@ -159,18 +207,44 @@
                           <div class="d-flex flex-wrap gap-1">
                             <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
                               class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
-                            <a
-                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
-                              <i class="bi-bookmark"></i>
+
+                            <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                              </i>
                             </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
+                        </a>
                           </div>
                         </div>
-                        <h4>
-                          <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
-                              class="pe-0" src="/assets/images/premium-icon.svg">
-                            {{post.titleText}}</a>
-                        </h4>
                       </div>
+                      <h4>
+                        <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
+                            class="pe-0" src="/assets/images/premium-icon.svg">
+                          {{post.titleText}}</a>
+                      </h4>
                       <div class="row align-items-center px-2">
                         <div class="col-lg-6">
                           <div class="author-block">
@@ -201,13 +275,39 @@
                       </div>
                       <div class="card-body  d-md-flex align-items-center">
                         <div class="card-flex-content">
-                          <div class="d-flex flex-wrap">
+                          <div class="d-flex flex-wrap gap-1">
                             <a *ngFor="let tag of post.postTags" (click)="openTagPosts(tag, $event)"
                               class="badge bg-info rounded-pill px-2">{{ tag.name }}</a>
-                            <a
-                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2">
-                              <i class="bi-bookmark"></i>
+
+                            <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                              </i>
                             </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
+                        </a>
                           </div>
                           <h4>
                             <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium"
