--- a/client-jss/src/app/main/components/main/main.component.html
+++ b/client-jss/src/app/main/components/main/main.component.html
@@ -35,9 +35,30 @@
                       <div class="row ms-0 pb-1 align-items-center">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill col-auto me-2 px-1">{{post.jssCategories[0].name}}</a>
-                        <a *ngIf="currentUser"
+                            <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                              </i>
+                            </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
                           class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
-                          (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                          (click)="handleBookmarkPost(post)">
                           <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
                                 'text-transparent': !post.isBookmarked}">
@@ -67,14 +88,35 @@
                     <div class="row pb-1 ms-0 align-items-center">
                       <a (click)="openCategoryPosts(lastPosts[0].jssCategories[0], $event)"
                         class="badge bg-info rounded-pill col-auto me-2 px-1">{{lastPosts[0].jssCategories[0].name}}</a>
-                      <a *ngIf="currentUser"
-                        class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
-                        (click)="lastPosts[0].isBookmarked ? unBookmarkPost(lastPosts[0]) : bookmarkPost(lastPosts[0])">
-                        <i [ngClass]="{'bi-bookmark': !lastPosts[0].isBookmarked,
+                      <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="lastPosts[0].isBookmarked ? unBookmarkPost(lastPosts[0]) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !lastPosts[0].isBookmarked,
                                 'bi-bookmark-fill text-dark': lastPosts[0].isBookmarked,
                                 'text-transparent': !lastPosts[0].isBookmarked}">
-                        </i>
-                      </a>
+                              </i>
+                            </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(lastPosts[0])"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(lastPosts[0])">
+                          <i [ngClass]="{'bi-bookmark': !lastPosts[0].isBookmarked,
+                                'bi-bookmark-fill text-dark': lastPosts[0].isBookmarked,
+                                'text-transparent': !lastPosts[0].isBookmarked}">
+                          </i>
+                        </a>
                     </div>
                     <h2>
                       <a class="card-title-truncate"
@@ -118,9 +160,30 @@
                       <div class="row align-items-center ms-0 mb-1">
                         <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                           class="badge bg-info rounded-pill px-1 col-auto me-2 mb-0">{{post.jssCategories[0].name}}</a>
-                        <a *ngIf="currentUser"
+                        <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                              </i>
+                            </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
                           class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
-                          (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)">
+                          (click)="handleBookmarkPost(post)">
                           <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
                                 'text-transparent': !post.isBookmarked}">
@@ -668,13 +731,35 @@
               <div class="row pb-1 px-2 align-items-center">
                 <a (click)="openCategoryPosts(post.jssCategories[0], $event)"
                   class="badge bg-info rounded-pill px-1 col-auto me-2">{{post.jssCategories[0].name}}</a>
-                <a class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
-                  (click)="post.isBookmarked ? unBookmarkPost(post) : bookmarkPost(post)" *ngIf="currentUser">
-                  <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                <a type="button" *ngIf="currentUser && readingFolders && readingFolders.length>0"
+                              class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                              [ngbPopover]="popoverContentTpl" popoverTitle="" placement="end" triggers="manual"
+                              #p="ngbPopover" popoverClass="custom-popover"
+                              (click)="post.isBookmarked ? unBookmarkPost(post) : p.open()">
+                              <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
                                 'bi-bookmark-fill text-dark': post.isBookmarked,
                                 'text-transparent': !post.isBookmarked}">
-                  </i>
-                </a>
+                              </i>
+                            </a>
+
+                            <ng-template #popoverContentTpl>
+                              <div class="list-group w-100">
+                                <button *ngFor="let folder of readingFolders" type="button"
+                                  (click)="handleBookmarkPost(post)"
+                                  class="list-group-item list-group-item-action text-truncate text-start py-2 px-3">
+                                  {{ folder.label }}
+                                </button>
+                              </div>
+                            </ng-template>
+
+                        <a *ngIf="currentUser && (!readingFolders || readingFolders.length==0)"
+                          class="rounded-outline-icon rounded-circle fs-8 d-flex align-items-center justify-content-center ms-2"
+                          (click)="handleBookmarkPost(post)">
+                          <i [ngClass]="{'bi-bookmark': !post.isBookmarked,
+                                'bi-bookmark-fill text-dark': post.isBookmarked,
+                                'text-transparent': !post.isBookmarked}">
+                          </i>
+                        </a>
               </div>
               <h4>
                 <a class="card-text-truncate" (click)="openPost(post, $event)"> <img *ngIf="post.isPremium" class="pe-0"
