--- a/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
+++ b/client-myjss/src/app/modules/my-account/components/bookmarks/bookmarks.component.html
@@ -1,7 +1,7 @@
 <section class="card border-0 py-1 p-md-2 p-xl-3 p-xxl-4 my-4">
   <div class="card-body">
     <div class="d-flex align-items-center mt-sm-n1 pb-4 mb-0 mb-lg-1 mb-xl-3">
-      <i class="ai-messages text-primary lead pe-1 me-2"></i>
+      <i class="bi-bookmark-fill text-dark rounded-circle lead pe-1 me-2"></i>
       <h2 class="h4 mb-0">Liste de lecture </h2>
     </div>
     <div class="d-md-flex align-items-center">
